--- a/Dev_Blog/Dev_Blog/Pages/Modals/Register.razor
+++ b/Dev_Blog/Dev_Blog/Pages/Modals/Register.razor
@@ -27,9 +27,10 @@
 @code {
     RegisterVM registerVM;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         registerVM = new RegisterVM();
+
     }
 
     async Task SubmitForm()
