Optimize Index page to retrive only one record rather than a list of records.

--- a/Dev_Blog/Dev_Blog/Pages/Index.razor
+++ b/Dev_Blog/Dev_Blog/Pages/Index.razor
@@ -40,6 +40,6 @@ else
     protected override void OnInitialized()
     {
         latestPost = db.Post.OrderByDescending(x => x.Date)
-                            .FirstOrDefault();
+                            .Take(1).ToList().FirstOrDefault();
     }
 }
