--- a/devblog/devblog/ClientApp/src/components/CreateComment.css
+++ b/devblog/devblog/ClientApp/src/components/CreateComment.css
@@ -1,9 +1,30 @@
+.create-comment {
+    margin-bottom: .25em;
+    /* border: .15em solid rgb(70, 68, 60);
+    border-radius: .75em; */
+    padding: .3em;
+}
+
 .create-comment form {
     display: inline-flex;
     flex-direction: column;
     width: 100%;
+    /* border: 1px solid red; */
+}
+
+.create-comment form input {
+    width: 10em;
+    /* border: 1px solid red; */
+    margin: .5em 0 .5em 0;
+    /* border: none; */
+    border: 0 0 1px 0;
 }
 
 .create-comment textarea {
-    width: auto;
+    /* width: 100%; */
+}
+
+.create-comment button {
+    margin-top: .5em;
+    width: 10em;
 }
