--- a/devblog/devblog/ClientApp/src/pages/Login.css
+++ b/devblog/devblog/ClientApp/src/pages/Login.css
@@ -4,11 +4,6 @@
     justify-content: center;
 }
 
-.login form input {
-    margin-bottom: 1em;
-}
-
-.login label,
-button {
-    display: block;
+.login button {
+    margin-top: 1em;
 }
