complete jwt auth

--- a/devblog/devblog/ClientApp/src/pages/SignIn.css
+++ b/devblog/devblog/ClientApp/src/pages/SignIn.css
@@ -1,9 +1,9 @@
-.login {
+.signIn {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.login button {
+.signIn button {
     margin-top: 1em;
 }
