--- a/devblog/devblog/ClientApp/src/components/Nav.css
+++ b/devblog/devblog/ClientApp/src/components/Nav.css
@@ -1,11 +1,38 @@
 .navbar {
     display: flex;
+    height: fit-content;
+    width: 100%;
 }
 
-.navbar a {
-    margin: 0 1em 0 1em;
+.navbar a,
+.accounts {
+    color: white;
+    font-size: 20px;
+    height: fit-content;
+    padding: 10px;
+    text-decoration: none;
+}
+
+.logo {
+    font-size: 40px;
 }
 
 .accounts {
+    border: none;
     margin-left: auto;
+}
+
+.navbar a.active {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.non-active,
+.accounts a {
+    opacity: 0.7;
+}
+
+.navbar a:hover,
+.accounts a:hover {
+    opacity: 1.0;
 }
