--- a/devblog/devblog/ClientApp/src/components/Post.css
+++ b/devblog/devblog/ClientApp/src/components/Post.css
@@ -22,3 +22,11 @@
 img {
     border-radius: .75em;
 }
+
+@media (max-width: 1000px) {
+
+    .post,
+    .post img {
+        width: 100%;
+    }
+}
