--- a/devblog/devblog/ClientApp/src/components/Comment.css
+++ b/devblog/devblog/ClientApp/src/components/Comment.css
@@ -1,20 +1,31 @@
 .comment {
-    display: "flex";
-    margin-bottom: .25em;
     border: .15em solid rgb(70, 68, 60);
     border-radius: .75em;
+    display: "flex";
+    margin-bottom: .25em;
     padding: .3em;
 }
 
 .comment-info {
-    display: flex;
     align-items: center;
+    display: flex;
+    padding: 5px 5px 0px 5px;
 }
 
 .comment p {
+    padding-left: 5px;
     width: 85%;
 }
 
 .comment-info span:last-child {
     margin-left: auto;
+}
+
+.comment-info span:first-child,
+.comment-info span:last-child {
+    font-size: 0.85em;
+}
+
+.comment-info span:first-child {
+    margin-right: 5px;
 }
