--- a/devblog/devblog/ClientApp/src/components/Nav.css
+++ b/devblog/devblog/ClientApp/src/components/Nav.css
@@ -1,8 +1,11 @@
 .navbar {
+    top: 0;
+    left: 0;
     display: flex;
     height: fit-content;
     margin: auto;
     width: 100vw;
+    position: fixed;
 }
 
 .navbar a,
@@ -21,6 +24,12 @@
 .accounts {
     border: none;
     margin-left: auto;
+    margin-right: 25px;
+}
+
+.accounts form {
+    display: flex;
+    justify-content: right;
 }
 
 .navbar a.active {
@@ -47,6 +56,5 @@
 
     .accounts a {
         padding: 10px 8px 0px 0px;
-
     }
 }
