--- a/devblog/devblog/ClientApp/src/components/Footer.css
+++ b/devblog/devblog/ClientApp/src/components/Footer.css
@@ -1,3 +1,12 @@
 .footer {
-    height: 115px;
+    height: 50px;
+    width: 100vw;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+}
+
+.footer button {
+    padding: 5px;
+    margin: 10px;
 }
