--- a/devblog/devblog/ClientApp/src/pages/Home.css
+++ b/devblog/devblog/ClientApp/src/pages/Home.css
@@ -3,5 +3,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 150px;
+    margin: 150px 20px 0px 20px;
+}
+
+.youtube-video {
+    margin-bottom: 100px;
+}
+
+@media (max-width: 1000px) {
+
+    .youtube-video {
+        width: 470px
+    }
 }
