--- a/devblog/devblog/ClientApp/src/pages/Posts.css
+++ b/devblog/devblog/ClientApp/src/pages/Posts.css
@@ -3,5 +3,5 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 150px;
+    margin: 150px 20px 0px 20px;
 }
