--- a/devblog/devblog/ClientApp/src/global.css
+++ b/devblog/devblog/ClientApp/src/global.css
@@ -2,3 +2,16 @@ button:hover {
     cursor: pointer;
     opacity: 0.7;
 }
+
+main {
+    width: 1100px;
+    margin: auto
+}
+
+@media (max-width: 1000px) {
+
+    main,
+    .post img {
+        width: 100%;
+    }
+}
