--- a/devblog/devblog/ClientApp/src/components/Nav.css
+++ b/devblog/devblog/ClientApp/src/components/Nav.css
@@ -8,7 +8,8 @@
     position: fixed;
 }
 
-.navbar a,
+.nav-items>a,
+.logo-link,
 .accounts {
     color: white;
     font-size: 20px;
@@ -21,15 +22,25 @@
     font-size: 40px;
 }
 
+.nav-items {
+    display: flex;
+    width: 100%;
+}
+
 .accounts {
     border: none;
     margin-left: auto;
-    margin-right: 25px;
+    margin-right: 20px;
+    display: flex;
+    align-items: end;
 }
 
-.accounts form {
-    display: flex;
-    justify-content: right;
+.nav-items>span:last-child {
+    flex-direction: column;
+}
+
+.nav-items>span:last-child a {
+    padding: 3px;
 }
 
 .navbar a.active {
@@ -47,14 +58,32 @@
     opacity: 1.0;
 }
 
-@media (max-width: 1000px) {
-    .accounts {
-        display: flex;
-        flex-direction: column;
-        padding: 0px;
+.mobile-nav {
+    display: none;
+}
+
+
+@media (max-width: 800px) {
+    .nav-items {
+        display: none;
     }
 
-    .accounts a {
-        padding: 10px 8px 0px 0px;
+    .mobile-nav a,
+    .mobile-nav form {
+        padding-top: 5px;
+    }
+
+    .mobile-nav {
+        margin-left: auto;
+        margin-right: 20px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .mobile-nav-accounts {
+        display: flex;
+        flex-direction: column;
     }
 }
