--- a/devblog/devblog/ClientApp/src/components/Nav.css
+++ b/devblog/devblog/ClientApp/src/components/Nav.css
@@ -32,7 +32,7 @@
     margin-left: auto;
     margin-right: 20px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .nav-items>span:last-child {
@@ -71,6 +71,7 @@
     .mobile-nav a,
     .mobile-nav form {
         padding-top: 5px;
+        margin-left: auto;
     }
 
     .mobile-nav {
@@ -79,7 +80,6 @@
         padding: 10px;
         display: flex;
         flex-direction: column;
-        align-items: start;
     }
 
     .mobile-nav-accounts {
