--- a/devblog/devblog/ClientApp/src/pages/AddPost.css
+++ b/devblog/devblog/ClientApp/src/pages/AddPost.css
@@ -1,7 +1,8 @@
 .create-post {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
+    margin-top: 150px;
 }
 
 .create-post form input {
