--- a/devblog/devblog/ClientApp/src/pages/SignIn.css
+++ b/devblog/devblog/ClientApp/src/pages/SignIn.css
@@ -1,6 +1,7 @@
 .sign-in-container {
-    display: flex;
     align-items: center;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     margin-top: 150px;
 }
@@ -17,4 +18,8 @@
 .sign-in-container button {
     margin-top: 1em;
     padding: 10px;
+}
+
+.sign-in-container>span {
+    color: red;
 }
