--- a/devblog/devblog/ClientApp/src/components/AddComment.css
+++ b/devblog/devblog/ClientApp/src/components/AddComment.css
@@ -1,8 +1,5 @@
 .create-comment {
-    margin-bottom: .25em;
-    /* border: .15em solid rgb(70, 68, 60);
-    border-radius: .75em; */
-    padding: .3em;
+    margin-bottom: 20px;
 }
 
 .create-comment form {
@@ -25,4 +22,5 @@
     border-radius: 0.5em;
     margin-top: .5em;
     width: 10em;
+    padding: 8px;
 }
