--- a/devblog/devblog/ClientApp/src/components/DeleteComment.css
+++ b/devblog/devblog/ClientApp/src/components/DeleteComment.css
@@ -1,4 +1,8 @@
-.delete-comment:hover {
+.delete-comment-btn:hover {
     color: red;
     cursor: pointer;
+}
+
+.delete-comment-btn {
+    padding: 0px 5px;
 }
