--- a/devblog/devblog/ClientApp/src/pages/Home.css
+++ b/devblog/devblog/ClientApp/src/pages/Home.css
@@ -21,7 +21,7 @@
 @media (max-width: 400px) {
 
     .youtube-video {
-        width: 100%;
-        height: 325px;
+        width: 325px;
+        height: 275px;
     }
 }
