Add markdown support for description

--- a/devblog/devblog/ClientApp/src/theme.css
+++ b/devblog/devblog/ClientApp/src/theme.css
@@ -34,6 +34,8 @@ button {
 .votes span,
 textarea,
 .sign-up-container,
+.description,
+.description-result,
 button {
     font-family: 'Chivo Mono', monospace;
 }
