--- a/devblog/devblog/ClientApp/src/pages/AddPost.css
+++ b/devblog/devblog/ClientApp/src/pages/AddPost.css
@@ -3,6 +3,12 @@
     display: flex;
     justify-content: center;
     margin-top: 150px;
+    justify-self: center;
+    left: 0;
+}
+
+.create-post>form {
+    width: 100%;
 }
 
 .create-post form input {
@@ -16,4 +22,23 @@ button {
 
 a {
     color: white;
+}
+
+.addpost-description {
+    display: flex;
+}
+
+.addpost-description>textarea {
+    width: 45%;
+    resize: none;
+    outline: none;
+    font-size: 17;
+    border: none;
+    border-right: 2px solid rgb(70, 68, 60);
+}
+
+.description-result {
+    width: 55%;
+    margin-left: 5px;
+    font-size: 12px;
 }
