--- a/devblog/devblog/ClientApp/src/components/styles/Post.css
+++ b/devblog/devblog/ClientApp/src/components/styles/Post.css
@@ -30,3 +30,15 @@ img {
     width: 100%;
     max-width: 900px;
 }
+
+.description {
+    width: 85%;
+    margin: auto;
+}
+
+
+@media (max-width: 800px) {
+    .description {
+        width: 100%;
+    }
+}
