--- a/devblog/devblog/ClientApp/src/components/styles/Vote.css
+++ b/devblog/devblog/ClientApp/src/components/styles/Vote.css
@@ -2,6 +2,11 @@
     margin-right: 8px;
 }
 
+.votes {
+    margin-left: 65px;
+    margin-top: 15px;
+}
+
 .up-vote:hover {
     color: yellow;
     cursor: pointer;
@@ -15,4 +20,10 @@
 .up-vote,
 .down-vote {
     padding: 5px;
+}
+
+@media (max-width: 800px) {
+    .votes {
+        margin-left: 0px;
+    }
 }
