--- a/devblog/devblog/ClientApp/src/components/styles/Nav.css
+++ b/devblog/devblog/ClientApp/src/components/styles/Nav.css
@@ -41,7 +41,7 @@
     padding: 3px;
 }
 
-.navbar .nav-items a.active {
+s .navbar .nav-items a.active {
     text-decoration: underline;
     font-weight: bold;
     opacity: 1.0;
@@ -52,7 +52,8 @@
 }
 
 .nav-items>a:nth-child(1),
-.nav-items>a:nth-child(2) {
+.nav-items>a:nth-child(2),
+.nav-items>a:nth-child(3) {
     margin-top: auto;
     margin-bottom: 5px;
 }
@@ -67,37 +68,51 @@
     opacity: 1.0;
 }
 
-.mobile-nav {
+.mobile-nav-links,
+.mobile-nav-icon {
     display: none;
 }
 
 
+
 @media (max-width: 800px) {
+    .mobile-nav {
+        display: flex;
+        margin-left: auto;
+        margin-right: 20px;
+        flex-direction: column;
+        top: 25px;
+        right: 5px;
+        z-index: 20;
+        position: fixed;
+        background-color: rgb(26, 32, 41);
+    }
+
     .nav-items {
         display: none;
     }
 
-    .mobile-nav a,
-    .mobile-nav form {
+    .mobile-nav-links a,
+    .mobile-nav-links form {
         text-decoration: none;
         padding-top: 5px;
-        margin-left: auto;
+        /* border: 2px solid yellow; */
     }
 
-    .mobile-nav a.active {
+    .mobile-nav-links a.active {
         text-decoration: underline;
     }
 
-    .mobile-nav {
-        margin-left: auto;
-        margin-right: 20px;
-        padding: 10px;
+    .mobile-nav-icon {
+        cursor: pointer;
         display: flex;
-        flex-direction: column;
+        margin-left: auto;
     }
 
-    .mobile-nav>span:first-child {
+    .mobile-nav-links {
         margin-left: auto;
+        padding: 10px;
+        flex-direction: column;
     }
 
     .mobile-nav-accounts {
@@ -107,5 +122,7 @@
 
     .logout {
         font-size: 16px;
+        margin-left: auto;
+        padding: 0px;
     }
 }
