--- a/devblog/devblog/ClientApp/src/components/styles/Post.css
+++ b/devblog/devblog/ClientApp/src/components/styles/Post.css
@@ -3,15 +3,21 @@
 }
 
 .post {
+    width: 90%;
     margin-bottom: 5em;
     border: .15em solid rgb(70, 68, 60);
     border-radius: .5em;
     padding: 1em;
 }
 
+.post>div {
+    margin: auto;
+    width: 95%;
+}
+
 .post-info {
+    flex-direction: column;
     display: flex;
-    align-items: center;
     margin-bottom: 10px;
 }
 
@@ -32,7 +38,6 @@ img {
 }
 
 .description {
-    width: 85%;
     margin: auto;
 }
 
