--- a/devblog/devblog/ClientApp/src/components/styles/EditPost.css
+++ b/devblog/devblog/ClientApp/src/components/styles/EditPost.css
@@ -1,4 +1,16 @@
+.edit-post-btn:hover {
+    color: greenyellow;
+    cursor: pointer;
+
+}
+
 .edit-post-description {
-    width: 99%;
+    /* width: 99%; */
+    width: 100%;
     height: 125px;
+}
+
+.edit-post>form>button {
+    display: inline;
+    margin-right: 10px;
 }
