--- a/devblog/devblog/ClientApp/src/pages/styles/Posts.css
+++ b/devblog/devblog/ClientApp/src/pages/styles/Posts.css
@@ -5,3 +5,33 @@
     justify-content: center;
     margin: 150px 20px 0px 20px;
 }
+
+.pager:first-child {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.pager:last-child {
+    display: flex;
+    margin-bottom: 100px;
+}
+
+.pager span {
+    font-family: 'Chivo Mono', monospace;
+    font-size: 20px;
+    line-height: 35px;
+}
+
+.arrow-hidden {
+    visibility: hidden;
+}
+
+.pager svg {
+    font-size: 35px;
+    opacity: 0.7;
+}
+
+.pager svg:hover {
+    cursor: pointer;
+    opacity: 1.0;
+}
