--- a/devblog/devblog/ClientApp/src/pages/styles/AddPost.css
+++ b/devblog/devblog/ClientApp/src/pages/styles/AddPost.css
@@ -11,6 +11,12 @@
     margin-left: 30px;
 }
 
+.upload-status>h4 {
+    margin: 0px;
+    font-weight: 100;
+    padding: 0px;
+}
+
 .upload-platforms ul {
     list-style: none;
 }
