--- a/devblog/devblog/ClientApp/src/pages/styles/AddPost.css
+++ b/devblog/devblog/ClientApp/src/pages/styles/AddPost.css
@@ -21,6 +21,10 @@
     list-style: none;
 }
 
+.loader {
+    padding: 10px;
+}
+
 .create-post {
     align-items: center;
     justify-content: center;
@@ -51,6 +55,7 @@ a {
     border: .15em solid rgb(70, 68, 60);
     border-radius: .5em;
     padding: 10px 20px;
+    margin-bottom: 100px;
 }
 
 .addpost-description {
@@ -58,7 +63,6 @@ a {
 }
 
 .addpost-description>textarea {
-    /* background-color: rgb(26, 32, 41); */
     width: 100%;
     min-height: 100px;
     resize: none;
@@ -71,7 +75,6 @@ a {
     padding: 20px;
     margin-bottom: 20px;
     min-height: 100px;
-    /* background-color: rgb(26, 32, 41); */
 }
 
 .create-post {
