--- a/devblog/devblog/ClientApp/src/theme.css
+++ b/devblog/devblog/ClientApp/src/theme.css
@@ -27,6 +27,17 @@ button {
     color: white;
 }
 
+button {
+    background-color: #28303d;
+    border-radius: 0.5em;
+
+}
+
+button:hover {
+    background-color: #323d4f;
+    cursor: pointer;
+}
+
 .comment,
 .date,
 .post-description,
