--- a/devblog/devblog/ClientApp/src/pages/styles/Home.css
+++ b/devblog/devblog/ClientApp/src/pages/styles/Home.css
@@ -3,18 +3,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 92px 20px 0px 20px;
+    margin: 0px 20px;
 }
 
 .subscribe-to-email {
-    margin: 100px 0px;
+    margin: 125px;
+    width: 100%;
     text-align: center;
 }
 
 .subscribe-to-email>button {
-    /* background-color: #2d3747; */
     padding: 15px;
-
     font-family: 'Chivo Mono', monospace;
     font-size: 15px;
     margin: auto;
@@ -33,17 +32,20 @@
 }
 
 .youtube-video {
-    width: 100%;
     height: 520px;
+    margin-top: 25px;
     margin-bottom: 100px;
+    width: 100%;
 }
 
 @media (max-width: 400px) {
     .subscribe-to-email {
-        margin: 50px 0px;
+        margin: 75px;
+        width: 100%;
     }
 
     .youtube-video {
         height: 350px;
+        margin-top: 10px;
     }
 }
