--- a/devblog/devblog/ClientApp/src/pages/styles/Home.css
+++ b/devblog/devblog/ClientApp/src/pages/styles/Home.css
@@ -6,17 +6,11 @@
     margin: 100px 20px 0px 20px;
 }
 
-.subscribe-to-email {
-    margin: 50px 0px 100px 0px;
-    width: 100%;
-    text-align: center;
-}
-
-.subscribe-to-email>button {
+.signup-prompt {
+    font-size: 20px;
     padding: 15px;
-    font-family: 'Chivo Mono', monospace;
-    font-size: 15px;
-    margin: auto;
+    margin: 75px 0px 100px 0px;
+    text-align: center;
 }
 
 .update-video>button {
@@ -39,9 +33,8 @@
 }
 
 @media (max-width: 400px) {
-    .subscribe-to-email {
-        margin: 25px 0px 100px 0px;
-        width: 100%;
+    .signup-prompt {
+        margin: 25px 0px 75px 0px;
     }
 
     .youtube-video {
