--- a/devblog/devblog/client/src/components/styles/commentDelete.css
+++ b/devblog/devblog/client/src/components/styles/commentDelete.css
@@ -1,8 +1,13 @@
-.delete-comment-btn:hover {
-    color: red;
-    cursor: pointer;
-}
-
 .delete-comment-btn {
     padding: 0px 5px;
+}
+
+.delete-comment-btn>svg {
+    height: 12;
+
+}
+
+.delete-comment-btn>svg:hover {
+    cursor: pointer;
+    fill: red;
 }
